Fix Discord Integration #1

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div id="TabArea"></div>
         <div class="Center">
-            <iframe src="https://titanembeds.com/embed/663543994805911573?fixedsidenav=false&noscroll=false&scrollbartheme=minimal-dark&lockscrollbar=false&theme=MetroEdge&username=Prospect&userscalable=true" height="600" width="600" frameborder="0"></iframe>
+            <iframe src=<iframe src="https://discordapp.com/widget?id=663543994805911573&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe> height="600" width="600" frameborder="0"></iframe>
         </div>
     </div>
     <script src="../javascript/tck.js"></script>
