Fix Discord Integration #1
Added Discord invite button.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <div id="TabArea"></div>
         <div class="Center">
             <iframe src="https://discordapp.com/widget?id=663543994805911573&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+            <a class="discord-widget" href="https://discord.gg/UZwVwnU" title="Join us on Discord">
+                <img src="https://discordapp.com/api/guilds/663543994805911573/embed.png?style=banner3">
+            </a>
         </div>
     </div>
     <script src="../javascript/tck.js"></script>
