Fix Discord Integration #1
Adding Widgets.io to the homepage as a test of different chat embeds

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="../css/tck.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/cb68b5f55c.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 </head>
 
 <body onload="onLoad()">
@@ -25,7 +26,13 @@
         </div>
         <div id="TabArea"></div>
         <div class="Center">
-            <iframe src="https://discordapp.com/widget?id=663543994805911573&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+            <widgetbot
+                server="663543994805911573"
+                channel="663543994805911579"
+                width="800"
+                height="600"
+                shard="https://thechaoskings.com"
+            ></widgetbot>
             <a class="discord-widget" href="https://discord.gg/UZwVwnU" title="Join us on Discord">
                 <img src="https://discordapp.com/api/guilds/663543994805911573/embed.png?style=banner3">
             </a>
