--- a/404.html
+++ b/404.html
@@ -24,3 +24,6 @@
                 <li class="nav-links" onclick="ShowMembers()"><i class="fas fa-users"></i> Members</li>
             </ul>
         </div>
+        <div>
+            <p>It looks like we lost this page. I'll let the Kings know. We will quest for this page in you're honor!</p>
+        </div>
