#7 More work on 404 Page

--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 
 <body onload="onLoad()">
     <div class="base">
-        <div class="HidePage"></div>
+        <div class="HidePage" style="display: none;"></div>
         <div class="navbar">
             <span class="navbar-toggle" id="js-navbar-toggle">
                 <i class="fas fa-bars"></i>
@@ -25,5 +25,5 @@
             </ul>
         </div>
         <div>
-            <p>It looks like we lost this page. I'll let the Kings know. We will quest for this page in you're honor!</p>
+            <p class="MembersText">It looks like we lost this page. I'll let the Kings know. We will quest for this page in you're honor!</p>
         </div>
