--- a/404.html
+++ b/404.html
@@ -25,5 +25,5 @@
             </ul>
         </div>
         <div class="Center">
-            <p class=" MembersText">It looks like we lost this page. I'll let the Kings know. We will quest for this page in you're honor!</p>
+            <h1 class=" MembersText">It looks like we lost this page. I'll let the Kings know. We will quest for this page in you're honor!</h1>
         </div>
