#7 Centering text for the error message

--- a/404.html
+++ b/404.html
@@ -24,6 +24,6 @@
                 <li class="nav-links" onclick="ShowMembers()"><i class="fas fa-users"></i> Members</li>
             </ul>
         </div>
-        <div class="Center">
+        <div class="MembersCenter">
             <h1 class=" MembersText">It looks like we lost this page. I'll let the Kings know. We will quest for this page in you're honor!</h1>
         </div>
