--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 </head>
 
-<body onload="onLoad()">
+<body>
     <div class="base">
         <div class="HidePage" style="display: none;"></div>
         <div class="navbar">
@@ -27,3 +27,6 @@
         <div class="MembersCenter">
             <h1 class=" MembersText">It looks like we lost this page. I'll let the Kings know. We will quest for this page in you're honor!</h1>
         </div>
+    </div>
+    <script src="../javascript/tck.js"></script>
+</body>
