--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
             </ul>
         </div>
         <div class="MembersCenter">
-            <h1 class=" MembersText">It looks like we lost this page. I'll let the Kings know. We will quest for this page in you're honor!</h1>
+            <h1 class="MembersText" style="text-align: center;">It looks like we lost this page. I'll let the Kings know. We will quest for this page in you're honor!</h1>
         </div>
     </div>
     <script src="../javascript/tck.js"></script>
