#7 Centering correction as error text was off

--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
                 <li class="nav-links" onclick="ShowMembers()"><i class="fas fa-users"></i> Members</li>
             </ul>
         </div>
-        <div class="MembersCenter">
+        <div class="ErrorCenter">
             <h1 class="MembersText" style="text-align: center;">It looks like we lost this page. I'll let the Kings know. We will quest for this page in you're honor!</h1>
         </div>
     </div>
