#13 Making more mobile friendly

--- a/test/index.html
+++ b/test/index.html
@@ -10,9 +10,10 @@
     <script src="https://kit.fontawesome.com/cb68b5f55c.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <script src="../javascript/chatrules.js"></script>
+    <script src="../javascript/test.js"></script>
 </head>
 
-<body onload="chatrules()">
+<body onload="onload()">
     <div class="base">
         <div class="HidePage" style="display: none;"></div>
         <div class="navbar" id="navbar">
